# zero_web

./: .gitignore  Cargo.toml  README.md
migrations/: 20250528172319_creat_subscription_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
