[package]
name = "zero_web"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero_web"

[env]
RUST_LOG = "trace"

[dependencies]
config = "0.15.11"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.1.2", features = ["v4"] }
chrono = "0.4.41"
# env_logger = "0.11.8"
# log = "0.4"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = [
  "env-filter",
  "registry",
] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
secrecy = { version = "0.10", features = ["serde"] }
tracing-actix-web = "0.7"

[dependencies.sqlx]
version = "0.8.6"
default-features = true
features = [
  # "runtime-actix-rustls",
  "runtime-tokio",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[dev-dependencies]
reqwest = "0.12"
once_cell = "1"
